--- a/src/pad/Actividad_final.ipynb
+++ b/src/pad/Actividad_final.ipynb
@@ -133,7 +133,16 @@
         "        df = df_datos.copy()\n",
         "        df[n_columnas] = df[columna].str.extract(reg).astype(int)\n",
         "        return df\n",
-        "\n"
+        "\n",
+        "    def limpieza_nan_null(self,df_datos =pd.DataFrame(), name_col=\"\", reemplezar=\"\"):\n",
+        "        if df_datos[name_col].isnull().sum()>0:\n",
+        "            df = df_datos.copy()\n",
+        "            df[name_col]=df[name_col].fillna(reemplezar)\n",
+        "            print(\"cantidad antes {}/{}  despues {}/{} \".format(df_datos[name_col].isnull().sum(),len(df_datos),df[name_col].isnull().sum(),len(df)))\n",
+        "            return df\n",
+        "        print(\"no hay nulos\")\n",
+        "        return df_datos\n",
+        "            #df_n[\"Company Profile\"]=df_n[\"Company Profile\"].fillna('{\"Sector\":\"\",\"Industry\":\"\"}')[28]\n"
       ]
     },
     {
@@ -988,6 +997,37 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FXPiRXNcexV_",
+        "outputId": "701fdd90-887e-4713-c096-ebc0f712055a"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User_ID              0\n",
+            "Name                 0\n",
+            "Age                  0\n",
+            "Country              0\n",
+            "Subscription_Type    0\n",
+            "Watch_Time_Hours     0\n",
+            "Favorite_Genre       0\n",
+            "Last_Login           0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(df.isnull().sum())"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "bAiLAhgapSvm"
@@ -1044,7 +1084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1075,7 +1115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
